[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"

[dev-dependencies]
criterion = "0.5.1"
quickcheck = "1.0.3"

[[bench]]
name = "benchmarks"
harness = false
